Updated UI to remove extra spaces, make time left in hour functional, and format length of songs correctly

--- a/app/css/playlist.css
+++ b/app/css/playlist.css
@@ -95,7 +95,7 @@ body {
 /* left in hour block */
 #leftInHour {
 	padding: 5px;
-	height: calc(15vh - 10px);
+	height: calc(25vh - 10px);
 	width: calc(100% - 10px);
 	background-color: #c04931;
 	color: black;
@@ -107,7 +107,7 @@ body {
 }
 
 #leftInHour #timeLeftInHour{
-	font-size: 2.0em;
+	font-size: 2.5em;
 	text-shadow:
 	   -2px -2px 0 #fff,  
 	    2px -2px 0 #fff,
@@ -119,7 +119,7 @@ body {
 #currentlyPlaying {
 	padding: 5px;
 	width: calc(100% - 10px);
-	height: calc(40vh - 10px);
+	height: calc(70vh - 10px);
 	background-color: black;
 	color: white;
 	/*position: relative;*/
@@ -148,28 +148,8 @@ body {
 	border: 1px solid #c04931;
 	width: 40%;
 	margin: 0 auto;
-}
-
-/* hot buttons */
-#hotButtons {
-	padding: 3px;
-	border-bottom: 2px solid black;
-	height: calc(10vh - 7px);
-	width: calc(100% - 6px);
-	background-color: white;
-	/*position: relative;*/
-	right:0px;
-	float: right;
-}
-
-/* Notifications */
-#notifications {
-	padding: 5px;
-	width: calc(100% - 10px);
-	height: calc(30vh - 10px);
-	right: 0px;
-	float: right;
-	background-color: white;
+	font-size: 2.0em;
+	line-height: 2em;
 }
 
 /* Playlist */
